<?xml version="1.0"?>
<package format="2">
  <name>rknn_pkg</name>
  <version>0.0.0</version>
  <description>The rknn_pkg package</description>

  <maintainer email="ucar@todo.todo">ucar</maintainer>
  <license>TODO</license>

  <!-- Dependencies for building and running this package -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>